[tool.poetry]
name = "CloudHarvestApi"
version = "0.1.0"
description = "This is the API layer for CloudHarvest."
authors = ["Cloud Harvest <email@cloudharvest.com>", "Fiona June Leathers <fiona.june.leathers@example.com>"]
license = "CC Attribution-NonCommercial-ShareAlike 4.0 International"
readme = "README.md"

[[tool.poetry.packages]]
include = "CloudHarvestApi"

[tool.poetry.dependencies]
python = ">=3.10"
Authlib = "*"
Flask = "*"
Jinja2 = "*"
PyYAML = "*"
flatten-json = "*"
pandas = "*"
pymongo = "*"
python-dateutil = "*"
rich-argparse = "*"
setuptools = "*"
CloudHarvestCoreTasks = { git = "https://github.com/Cloud-Harvest/CloudHarvestCoreTasks.git" }
CloudHarvestCoreDataModel = { git = "https://github.com/Cloud-Harvest/CloudHarvestCoreDataModel.git" }

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "CloudHarvestApi"
url = "https://github.com/Cloud-Harvest/CloudHarvestApi"
